maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:43: error: type mismatch;
 found   : Any
 required: plm.universe.Direction
  setDirection(dir);
               ^